--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,17 @@ jobs:
         node-version: '20'
     - name: Install dependencies
       run: npm install
+    - name: Sync Capacitor
+      run: npx cap sync
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v3
+    - name: Set up Gradle
+      uses: gradle/actions/setup-gradle@v4
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew assembleDebug
     - name: Upload APK
