--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sync": "npx cap sync"
   },
   "keywords": [
     "ecosystem:cordova"
   ],
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
+  "dependencies": {
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor-firebase/messaging": "^7.1.0",
+    "@capacitor/push-notifications": "^7.0.1",
+    "admob-plus-cordova": "^1.28.0",
+    "firebase": "^11.6.0"
+  },
   "devDependencies": {
+    "@capacitor/cli": "^7.2.0",
     "cordova-android": "^13.0.0",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^8.1.3",
@@ -31,12 +41,5 @@
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
       }
     }
-  },
-  "dependencies": {
-    "@capacitor-firebase/messaging": "^7.1.0",
-    "@capacitor/android": "^7.2.0",
-    "@capacitor/push-notifications": "^7.0.1",
-    "admob-plus-cordova": "^1.28.0",
-    "firebase": "^11.6.0"
   }
 }
