--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,18 @@ jobs:
         node-version: '20'
     - name: Install dependencies
       run: npm install
+    - name: Create google-services.json
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      run: |
+        if [ -n "$GOOGLE_SERVICES_JSON" ]; then
+          echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
+        else
+          echo "Error: GOOGLE_SERVICES_JSON secret is not set"
+          exit 1
+        fi
     - name: Sync Capacitor
-      run: npx cap sync
+      run: npx cap sync || (echo "npx cap sync failed"; exit 1)
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -23,7 +33,7 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
