--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
     - name: Set up Gradle
       uses: gradle/actions/setup-gradle@v4
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      run: chmod +x android/gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
+      run: android/gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
