--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x android/gradlew
     - name: Build with Gradle
-      run: android/gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
+      working-directory: android
+      run: ./gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
