--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,5 +2,5 @@ org.gradle.jvmargs=-Xmx256m -Xms64m -XX:MaxMetaspaceSize=96m -XX:ReservedCodeCac
 org.gradle.workers.max=1
 org.gradle.parallel=false
 org.gradle.caching=true
-org.gradle.java.home=C:\Program Files\Eclipse Adoptium\jdk-17.0.15.6-hotspot
+#org.gradle.java.home=C:\Program Files\Eclipse Adoptium\jdk-17.0.15.6-hotspot
 org.gradle.daemon.performance.disable-logging=true
