--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,3 @@
-org.gradle.jvmargs=-Xmx256m -Xms64m -XX:MaxMetaspaceSize=96m -XX:ReservedCodeCacheSize=32m -Xss256k -XX:+UseSerialGC -XX:-UseCompiler -XX:+HeapDumpOnOutOfMemoryError
-org.gradle.workers.max=1
-org.gradle.parallel=false
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.caching=true
-#org.gradle.java.home=C:\Program Files\Eclipse Adoptium\jdk-17.0.15.6-hotspot
-org.gradle.daemon.performance.disable-logging=true
+android.useAndroidX=true
