Force Java 17 for all subprojects

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,30 @@
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.6.1'
-        classpath 'com.google.gms:google-services:4.4.2'
-    }
+repositories {
+google()
+mavenCentral()
+}
+dependencies {
+classpath 'com.android.tools.build:gradle:8.6.1'
+classpath 'com.google.gms:google-services:4.4.2'
+}
 }
 
 allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
+repositories {
+google()
+mavenCentral()
+}
+}
+
+subprojects {
+afterEvaluate {
+if (it.hasProperty('android')) {
+android {
+compileOptions {
+sourceCompatibility JavaVersion.VERSION_17
+targetCompatibility JavaVersion.VERSION_17
+}
+}
+}
+}
 }
