--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,25 @@
 name: Android Build
-on: [push]
+
+on:
+  push:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
+
     - name: Install dependencies
       run: npm install
+
     - name: Create google-services.json
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
@@ -21,20 +30,30 @@ jobs:
           echo "Error: GOOGLE_SERVICES_JSON secret is not set"
           exit 1
         fi
+
     - name: Sync Capacitor
       run: npx cap sync || (echo "npx cap sync failed"; exit 1)
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+
     - name: Set up Gradle
       uses: gradle/actions/setup-gradle@v4
+
     - name: Make gradlew executable
       run: chmod +x android/gradlew
+
     - name: Build with Gradle
       working-directory: android
       run: ./gradlew assembleDebug || (echo "gradlew assembleDebug failed"; exit 1)
+
+    - name: List build outputs
+      working-directory: android
+      run: find app/build/outputs -type f
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
