--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,12 +20,20 @@ minifyEnabled true
 proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 }
 debug {
-signingConfig null
+signingConfig signingConfigs.debug
 }
 }
 compileOptions {
 sourceCompatibility JavaVersion.VERSION_17
 targetCompatibility JavaVersion.VERSION_17
+}
+signingConfigs {
+debug {
+storeFile file('debug.keystore')
+storePassword 'android'
+keyAlias 'androiddebugkey'
+keyPassword 'android'
+}
 }
 }
 
