--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,7 @@ targetCompatibility JavaVersion.VERSION_17
 }
 signingConfigs {
 debug {
+storeFile file(System.getProperty('user.home') + '/.android/debug.keystore')
 storePassword 'android'
 keyAlias 'androiddebugkey'
 keyPassword 'android'
