--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,6 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-firebase-messaging')
     implementation project(':capacitor-push-notifications')
+    implementation project(':capacitor-toast')
     implementation "com.google.android.gms:play-services-ads:20.6.0"
     implementation "androidx.webkit:webkit:1.4.0"
 }
