--- a/android/capacitor-cordova-android-plugins/build.gradle
+++ b/android/capacitor-cordova-android-plugins/build.gradle
@@ -28,22 +28,26 @@ android {
         abortOnError false
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 }
 
 repositories {
     google()
     mavenCentral()
+    flatDir{
+        dirs 'src/main/libs', 'libs'
+    }
 }
 
 dependencies {
+    implementation fileTree(dir: 'src/main/libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "org.apache.cordova:framework:$cordovaAndroidVersion"
     // SUB-PROJECT DEPENDENCIES START
-    implementation "com.google.android.gms:play-services-ads:23.2.0"
-    implementation "androidx.webkit:webkit:1.12.1"
+    implementation "com.google.android.gms:play-services-ads:20.6.0"
+    implementation "androidx.webkit:webkit:1.4.0"
     // SUB-PROJECT DEPENDENCIES END
 }
 
