--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@capacitor/core": "^7.2.0",
-    "@capacitor/android": "^7.2.0",
     "@capacitor-firebase/messaging": "^7.1.0",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
     "@capacitor/push-notifications": "^7.0.1",
+    "@capacitor/toast": "^7.0.1",
     "admob-plus-cordova": "^1.28.0",
     "firebase": "^11.6.0"
   },
